# openvideo

./: CMakeLists.txt  FindOpenVideo.cmake  INSTALL_win32.txt  Makefile  Makefile.am  Makefile.common  Makefile.in  OpenVideo.pc.in  OpenVideoConfig.cmake  README  SConstruct  bootstrap  configure  configure.ac  makedist.sh  openvideo.pc.in  openvideo.spec  openvideo.spec.in  targets.py
data/: dsvl.xml  ffmpeg_test.xml  openVideo.xml  openVideo_DSVL.xml  testOpenVideo.xml  v4l_test4.xml  vl4_test.xml
debian/: changelog  control  libopenvideo1-dev.install  rules
doc/: changes.txt  contributions.txt  footer.html  header.html  main_page.txt  openvideo.dxy  openvideo.tag
include/: Manager.h  NodeFactory.h  PixelFormat.h  Timer.h  TimerHandler.h  configOV.template.h  openVideo.h
include/nodes/: GLUTSink.h  GLUTSinkFactory.h  GL_TEXTURE_2D_Sink.h  GL_TEXTURE_2D_SinkFactory.h  TestSrc.h  TestSrcFactory.h  VideoSink.h  VideoSinkFactory.h  VideoSinkSubscriber.h  VideoWrapperSrc.h  VideoWrapperSrcFactory.h
include/openvideo/: Converter.h  ConverterMJPEG.h  ConverterYUY2.h  ConverterYV12.h  Logger.h  LoggerBase.h  LoggerPC.h  Manager.h  Node.h  NodeFactory.h  OvLogger.h  PixelFormat.h  Scheduler.h  SchedulerBase.h  SchedulerPC.h  State.h  TimerACE.h  TimerBase.h  TimerHandlerACE.h  configOV.h  configOV.template.h  openVideo.h
include/openvideo/nodes/: DSVLSrc.h  DSVLSrcFactory.h  FFmpegSrc.h  GLUTSink.h  GLUTSinkFactory.h  GL_TEXTURE_2D_Sink.h  GL_TEXTURE_2D_SinkFactory.h  ImageSrc.h  ImageSrcFactory.h  Live555SrcFactory.h  OpenCVSrc.h  OpenCVSrcFactory.h  RTPSrc.h  RTPSrcFactory.h  SpectecSrc.h  SpectecSrcFactory.h  TestSrc.h  TestSrcFactory.h  V4L2Src.h  V4LSrc.h  V4LSrcFactory.h  VideoSink.h  VideoSinkFactory.h  VideoSinkSubscriber.h  VideoWrapperSrc.h  VideoWrapperSrcFactory.h
lib/: Makefile.in
lib/linux/: Makefile.am  Makefile.in
sample/SwitchNodeSampleCfg/: openvideo_switch.xml
sample/TestWinCE/: TestWinCE.cpp  TestWinCE.h
sample/TestWinCE/PocketHAL/: IGame.h  VGAFont.h  game.cpp  game.h  utility.cpp  utility.h
sample/TestWinCE/PocketHAL/win32/: GameBase.cpp  GameBase.h
src/: CMakeLists.txt  SConscript  configOV.h  configOV.template.h  openVideo.h
src/CamViewWin/: CamViewWin.clw  CamViewWin.cpp  CamViewWin.h  CamViewWin.rc  CamViewWinDlg.cpp  CamViewWinDlg.h  StdAfx.cpp  StdAfx.h  resource.h
src/CamViewWin/res/: CamViewWin.rc2
src/core/: Context.cxx  Context.h  Converter.cxx  ConverterMJPEG.cxx  ConverterYUY2.cxx  ConverterYV12.cxx  DLL.cxx  LoggerBase.cxx  LoggerBase.h  LoggerPC.cxx  Manager.cxx  Manager.h  Node.cxx  Node.h  NodeFactory.cxx  NodeFactory.h  OvLogger.cpp  PixelFormat.cxx  PixelFormat.h  SchedulerBase.cxx  SchedulerPC.cxx  State.cxx  State.h  Timer.cxx  Timer.h  TimerACE.cxx  TimerHandler.cxx  TimerHandler.h  TimerHandlerACE.cxx  TinyXML.cxx  disable4251.h
src/core/wince/: MemManager.cpp  MemManager.h
src/nodes/: DSVLSrc.cxx  DSVLSrcFactory.cxx  FFmpegSrc.cxx  GLUTSink.cxx  GLUTSinkFactory.cxx  GL_TEXTURE_2D_Sink.cxx  GL_TEXTURE_2D_SinkFactory.cxx  ImageSrc.cxx  ImageSrcFactory.cxx  OpenCVSrc.cxx  OpenCVSrcFactory.cxx  RTPSrc.cxx  RTPSrcFactory.cxx  SpectecSrc.cxx  SpectecSrcFactory.cxx  Switch.cxx  SwitchFactory.cxx  TestSrc.cxx  TestSrcFactory.cxx  V4L2Src.cxx  V4L2SrcFactory.cxx  V4LSrc.cxx  V4LSrcFactory.cxx  VideoSink.cxx  VideoSinkFactory.cxx  VideoSinkSubscriber.cxx  VideoWrapperSrc.cxx  VideoWrapperSrcFactory.cxx  rtpsrc.cxx  v4l.c
src/nodes/GLUTSink/: GLUTSink.cxx  GLUTSink.h  GLUTSinkFactory.cxx  GLUTSinkFactory.h
src/nodes/GL_TEXTURE_2D_Sink/: GL_TEXTURE_2D_Sink.cxx  GL_TEXTURE_2D_Sink.h  GL_TEXTURE_2D_SinkFactory.cxx  GL_TEXTURE_2D_SinkFactory.h
src/nodes/TestSrc/: TestSrc.cxx  TestSrc.h  TestSrcFactory.cxx  TestSrcFactory.h
src/nodes/V4LSrc/: V4LSrc.cxx  V4LSrc.h  V4LSrcFactory.cxx  V4LSrcFactory.h
src/nodes/VideoSink/: VideoSink.cxx  VideoSinkFactory.cxx  VideoSinkSubscriber.cxx
src/nodes/VideoWrapperSrc/: VideoWrapperSrc.cxx  VideoWrapperSrc.h  VideoWrapperSrcFactory.cxx  VideoWrapperSrcFactory.h
src/vidcaptest/: main.cpp
src/vidcapture/: AutoLinkWindows.h  CVDShowUtil.cpp  CVDShowUtil.h  CVFile.cpp  CVImage.cpp  CVImage.h  CVImageBGR24.cpp  CVImageBGR24.h  CVImageBGRX32.cpp  CVImageBGRX32.h  CVImageRGBX32.cpp  CVImageRGBX32.h  CVImageStructs.h  CVImageXBGR32.cpp  CVImageXBGR32.h  CVImageXRGB32.cpp  CVImageXRGB32.h  CVTraceWin32.cpp  CVVidCapture.cpp  CVVidCapture.h  CVVidCaptureDSWin32.cpp  CVVidCaptureDSWin32.h
standalone/: CMakeLists.txt  SConstruct  main.cxx
