FILE(GLOB_RECURSE OPENVIDEO_SOURCES *.c *.cpp *.cxx)
FILE(GLOB_RECURSE OPENVIDEO_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ../include/*.h ../include/*.hpp)

IF(OT_USE_AVIFILE64)
   ADD_DEFINITIONS("-DOT_USE_AVIFILE64")
ENDIF(OT_USE_AVIFILE64)

ADD_DEFINITIONS(-DTINYXML_MOD)
ADD_DEFINITIONS(-DENABLE_GL_TEXTURE_2D_SINK)
ADD_DEFINITIONS(-DENABLE_VIDEOSINK)

IF(OT_USE_DSVL)
   ADD_DEFINITIONS(-DENABLE_DSVLSRC)
ENDIF(OT_USE_DSVL)

IF(OT_USE_GLUT)
   #MESSAGE("Compile in GLUT sink support")
   ADD_DEFINITIONS(-DENABLE_GLUTSINK)
ENDIF(OT_USE_GLUT)
IF(OT_USE_OPENCV)
   #MESSAGE("Compile in OpenCV support")
   ADD_DEFINITIONS(-DENABLE_OPENCV)
   INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
   LINK_DIRECTORIES(${OpenCV_LINK_DIRECTORIES})
ENDIF(OT_USE_OPENCV)

IF(WIN32)
   ADD_DEFINITIONS(-DOT_DO_NOT_LINK_TINYXML_VIA_PRAGMA_COMMENT_LIB) # This is a workaround for win32
   ADD_DEFINITIONS(-DOPENVIDEO_EXPORTS)
ENDIF(WIN32)

ADD_LIBRARY(openvideo SHARED ${OPENVIDEO_SOURCES} ${OPENVIDEO_HEADERS})
TARGET_LINK_LIBRARIES(openvideo ${ACE_LIBRARIES} ${TINY_XML_MOD_LIBRARIES} ${AVIFILE_LIBRARIES})
IF(OT_USE_GLUT)
   TARGET_LINK_LIBRARIES(openvideo ${GLUT_LIBRARIES})
ENDIF(OT_USE_GLUT)
IF(OT_USE_OPENCV)
   TARGET_LINK_LIBRARIES(openvideo ${OpenCV_LIBRARIES})
ENDIF(OT_USE_OPENCV)
   
INSTALL(TARGETS openvideo DESTINATION ${CMAKE_INSTALL_LIBDIR})
SET_TARGET_PROPERTIES(openvideo PROPERTIES VERSION ${CPACK_PACKAGE_VERSION} SOVERSION ${CPACK_PACKAGE_VERSION_MAJOR})
